# infinite-jukebox

./: README.md  pyproject.toml
src/infinite_jukebox/: __init__.py  analyze.py  cli.py  download.py  player.py  tui.py
tests/: test_smoke.py
