[project]
name = "infinite-jukebox"
version = "0.1.0"
description = "Play any song forever by splicing between similar beats."
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "sounddevice>=0.5.5",
    "textual>=0.85",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
infinite-jukebox = "infinite_jukebox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infinite_jukebox"]
